--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -84,7 +84,7 @@ source.root=src
 src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
-war.ear.name=AffableBean.war
-war.name=AffableBean.war
+war.ear.name=Dryves.war
+war.name=Dryves.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
