--- a/web/package.json
+++ b/web/package.json
@@ -11,9 +11,11 @@
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.2",
+    "gulp-jshint": "^1.9.0",
     "gulp-livereload": "^2.1.1",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.0.1",
-    "gulp-watch": "^2.0.0"
+    "gulp-watch": "^2.0.0",
+    "jshint-stylish": "^1.0.0"
   }
 }
