--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.json-simple-1.1.1.jar=/Users/tomasharkema/Downloads/json-simple-1.1.1.jar
+file.reference.json-simple-1.1.1.jar=lib/json-simple-1.1.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
