--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-simple-1.1.1.jar-1}
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
