--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,9 @@
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.2",
+    "gulp-cssmin": "^0.1.6",
     "gulp-jshint": "^1.9.0",
+    "gulp-less": "^2.0.1",
     "gulp-livereload": "^2.1.1",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.0.1",
