--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.2",
     "gulp-cssmin": "^0.1.6",
+    "gulp-if": "^1.2.5",
     "gulp-jshint": "^1.9.0",
     "gulp-less": "^2.0.1",
     "gulp-livereload": "^2.1.1",
