--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -8,6 +8,10 @@ auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
 auxiliary.org-netbeans-modules-css-prep.less_2e_configured=true
 auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
 auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=node_modules/gulp-less/node_modules/less/lib/less/tree
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -54,12 +58,12 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.commons-collections4-4.0.jar}:\
     ${file.reference.javaee.jar}:\
     ${file.reference.javax.ejb.jar}:\
     ${file.reference.javax.persistence.jar}:\
     ${file.reference.json-io-2.3.0.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.markdown4j-2.2.jar}:\
     ${file.reference.validation-api-1.0.0.GA.jar}:\
     ${file.reference.validation-api-1.1.0.CR3.jar}
