--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,14 +36,8 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.commons-collections4-4.0.jar=lib/commons-collections4-4.0.jar
-file.reference.javaee.jar=lib/javaee.jar
-file.reference.javax.ejb.jar=lib/javax.ejb.jar
-file.reference.javax.persistence.jar=lib/javax.persistence.jar
-file.reference.json-io-2.3.0.jar=lib/json-io-2.3.0.jar
 file.reference.json-simple-1.1.1.jar=lib/json-simple-1.1.1.jar
 file.reference.markdown4j-2.2.jar=lib/markdown4j-2.2.jar
-file.reference.validation-api-1.0.0.GA.jar=lib/validation-api-1.0.0.GA.jar
-file.reference.validation-api-1.1.0.CR3.jar=lib/validation-api-1.1.0.CR3.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -59,14 +53,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-collections4-4.0.jar}:\
-    ${file.reference.javaee.jar}:\
-    ${file.reference.javax.ejb.jar}:\
-    ${file.reference.javax.persistence.jar}:\
-    ${file.reference.json-io-2.3.0.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.markdown4j-2.2.jar}:\
-    ${file.reference.validation-api-1.0.0.GA.jar}:\
-    ${file.reference.validation-api-1.1.0.CR3.jar}
+    ${file.reference.markdown4j-2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
