--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-collections4-4.0.jar=lib/commons-collections4-4.0.jar
 file.reference.json-simple-1.1.1.jar=lib/json-simple-1.1.1.jar
+file.reference.markdown4j-2.2.jar=lib/markdown4j-2.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,7 +48,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.markdown4j-2.2.jar}:\
+    ${file.reference.commons-collections4-4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
