add user to header

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -22,7 +22,7 @@
             <description>header and footer settings</description>
             <url-pattern>/index.jsp</url-pattern>
             <url-pattern>/WEB-INF/view/*</url-pattern>
-            <include-prelude>/WEB-INF/jspf/header.jspf</include-prelude>
+            <include-prelude>/WEB-INF/jspf/header.jsp</include-prelude>
             <include-coda>/WEB-INF/jspf/footer.jspf</include-coda>
         </jsp-property-group>
         <jsp-property-group>
