--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -33,4 +33,25 @@
             <include-coda>/WEB-INF/jspf/admin/footer.jspf</include-coda>
         </jsp-property-group>
     </jsp-config>
+    
+    <filter>
+        <filter-name>LoginFilter</filter-name>
+        <filter-class>filter.LoginFilter</filter-class>
+    </filter>
+
+    <filter>
+        <filter-name>LoggedinFilter</filter-name>
+        <filter-class>filter.LoggedinFilter</filter-class>
+    </filter>
+    
+    <filter-mapping>
+        <filter-name>LoginFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>LoggedinFilter</filter-name>
+        <url-pattern>/overview</url-pattern>
+        <url-pattern>/overview/*</url-pattern>
+    </filter-mapping>
 </web-app>
